Finished cooldowns ans basic UI

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Unity WebGL Player | Generic MOBA</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      UnityLoader.instantiate("unityContainer", "Build/WebGl.json");
+      UnityLoader.instantiate("unityContainer", "Build/Generic-MOBA-WebGl.json");
     </script>
   </head>
   <body>
